--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -1,6 +1,3 @@
-/* .front{
-    margin-top: 30px;
-} */
 .card{
     margin:21px auto auto;
     padding: 1%;
@@ -27,12 +24,14 @@
 .input-header input{
     margin: auto;
     display:block;
+    color:white;
     width:95%;
     padding:5%;
     border-radius:15px;
     padding-left:40px;
     font-size: 1.5rem;
     border:none;
+    outline: none;
     background: rgb(37,3,74)!important;
 }
 .input-header span{
@@ -40,14 +39,14 @@
     top:30%;
     right:10%;
     color:white;
+    background-color: rgb(37,3,74);
     font-size: 1.5rem;
     align-items: center;
+
 }
-/* .sec-first */
 .sec-second .card{
     background-color: rgb(37,3,74);
     border-radius: 20px;
-    /* margin:auto; */
     display:block;
     width:95%;
     margin-top: 42px;
